--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,8 +6,14 @@
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    	<script   src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous"></script>
+    	<!-- <script   src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous"></script>-->
     	<!-- Latest compiled and minified JavaScript -->
+
+		<!-- Bootstrap 3.3.6 not work correctly with jquery 3.0.0-->
+    	<script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity=
+    	"sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="  crossorigin="anonymous"></script>
+    	<!-- Latest compiled and minified JavaScript -->
+
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
     	<script src="/simplecolorpicker/jquery.simplecolorpicker.js"></script>
@@ -34,6 +40,19 @@
 			      <li><a href="/blabla">Blabla</a></li>
 			      <li><a href="/something">Something</a></li>
 			      <li><a href="/contacts">Contacts</a></li>
+			    </ul>
+			    <ul class="nav navbar-nav navbar-right">
+			        <li class="dropdown">
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Stranger <b class="caret"></b></a>
+			        <ul class="dropdown-menu">
+			        	<li><a href="/register">Register</a></li>
+			        	<li class="divider"></li>
+			            <li><a href="/login/form">Login</a></li>
+			            <li class="divider"></li>
+			            <li><a href="/logout">Logout</a></li>
+			        </ul>
+			      </li>
+
 			    </ul>
 			  </div><!--/.nav-collapse -->
 			</nav>
