--- a/views/layout.erb
+++ b/views/layout.erb
@@ -47,7 +47,7 @@
 			        <ul class="dropdown-menu">
 			        	<li><a href="/register">Register</a></li>
 			        	<li class="divider"></li>
-			            <li><a href="/login/form">Login</a></li>
+			            <li><a href="/login">Login</a></li>
 			            <li class="divider"></li>
 			            <li><a href="/logout">Logout</a></li>
 			        </ul>
