--- a/views/register.erb
+++ b/views/register.erb
@@ -5,7 +5,7 @@
 <form action="/register" method="POST">
   <div class="form-group">
     <label>Login:</label>
-    <input name="user[name]" type="text" class="form-control" placeholder="Login">
+    <input name="user[name]" type="text" class="form-control" placeholder="Login" autofocus>
   </div>
   <div class="form-group">
     <label>Password:</label>
