--- a/views/layout.erb
+++ b/views/layout.erb
@@ -33,17 +33,16 @@
 			      <span class="icon-bar"></span>
 			      <span class="icon-bar"></span>
 			    </button>
-			    <a class="navbar-brand" href="/">My Website</a>
+			    <a class="navbar-brand" href="/">Leprasorium</a>
 			  </div>
 			  <div class="navbar-collapse collapse">
 			    <ul class="nav navbar-nav">
-			      <li><a href="/blabla">Blabla</a></li>
-			      <li><a href="/something">Something</a></li>
-			      <li><a href="/contacts">Contacts</a></li>
+			      <li><a href="/secure/post">Add new post</a></li>
+			      <li><a href="/secure/users">List of users</a></li>
 			    </ul>
 			    <ul class="nav navbar-nav navbar-right">
 			        <li class="dropdown">
-			          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Stranger <b class="caret"></b></a>
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%=username%><b class="caret"></b></a>
 			        <ul class="dropdown-menu">
 			        	<li><a href="/register">Register</a></li>
 			        	<li class="divider"></li>
