--- a/views/login.erb
+++ b/views/login.erb
@@ -5,7 +5,7 @@
 <form action="/login" method="POST">
   <div class="form-group">
     <label>Login:</label>
-    <input value="<%=@user%>" name="user" type="text" class="form-control" placeholder="Login">
+    <input value="<%=@user%>" name="user" type="text" class="form-control" placeholder="Login" autofocus>
   </div>
   <div class="form-group">
     <label>Password:</label>
