--- a/views/layout.erb
+++ b/views/layout.erb
@@ -44,11 +44,13 @@
 			        <li class="dropdown">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%=username%><b class="caret"></b></a>
 			        <ul class="dropdown-menu">
-			        	<li><a href="/register">Register</a></li>
-			        	<li class="divider"></li>
-			            <li><a href="/login">Login</a></li>
-			            <li class="divider"></li>
-			            <li><a href="/logout">Logout</a></li>
+			        	<% if !session[:identity] %>
+			        		<li><a href="/register">Register</a></li>
+			        		<li class="divider"></li>
+			            	<li><a href="/login">Login</a></li>			            	
+			            <% else %>			        				        		            
+			            	<li><a href="/logout">Logout</a></li>
+			        	<% end %>			            
 			        </ul>
 			      </li>
 
