--- a/views/index.erb
+++ b/views/index.erb
@@ -36,7 +36,7 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-10">
-			<a href="/comments">Comments</a>
+			<a href="/comments/<%= post.id %>">Comments</a>
 			</div>
 		</div>
 	<hr>	
