--- a/views/comments.erb
+++ b/views/comments.erb
@@ -1,1 +1,8 @@
-<h2>Comments for post:</h2>
+<h4>Post <%= @post.id %>:</h4>
+<p>
+	<em><%= @post.post %></em> 
+	<br><br>
+	Added <em><%= @post.name %></em> at <%= @post.created_at.to_s[0..9]%> in <%= @post.created_at.to_s[11..15]%>
+</p>
+
+<hr>
